<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.tech_fragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/darkergray"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/event_1"
            android:layout_width="350dp"
            android:layout_height="140dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            android:background="@drawable/dgrate_accent_2"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            tools:ignore="UnusedAttribute">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_img_tec_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription,MissingConstraints" />

            <TextView
                android:id="@+id/text_tec_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="55dp"
                android:text="@string/tech_event_1"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/event_2"
            android:layout_width="350dp"
            android:layout_height="140dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            android:background="@drawable/dgrate_accent_2"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            tools:ignore="UnusedAttribute">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_img_tec_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription,MissingConstraints" />

            <TextView
                android:id="@+id/text_tec_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="55dp"
                android:text="@string/tech_event_2"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/event_3"
            android:layout_width="350dp"
            android:layout_height="140dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="355dp"
            android:layout_marginEnd="31dp"
            android:layout_marginRight="31dp"
            android:background="@drawable/dgrate_accent_2"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            tools:ignore="UnusedAttribute">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="25dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_img_tec_3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription,MissingConstraints" />

            <TextView
                android:id="@+id/text_tec_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="55dp"
                android:text="@string/tech_event_3"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/event_4"
            android:layout_width="350dp"
            android:layout_height="140dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="510dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/dgrate_accent_2"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            tools:ignore="UnusedAttribute">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="85dp"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_img_tec_4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription,MissingConstraints" />

            <TextView
                android:id="@+id/text_tec_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="55dp"
                android:text="@string/tech_event_4"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/event_5"
            android:layout_width="350dp"
            android:layout_height="140dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="665dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/dgrate_accent_2"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            tools:ignore="UnusedAttribute">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_img_tec_5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription,MissingConstraints" />

            <TextView
                android:id="@+id/text_tec_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="55dp"
                android:text="@string/tech_event_5"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/event_6"
            android:layout_width="350dp"
            android:layout_height="140dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="820dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/dgrate_accent_2"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            tools:ignore="UnusedAttribute">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_img_tec_6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription,MissingConstraints" />

            <TextView
                android:id="@+id/text_tec_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="55dp"
                android:text="@string/tech_event_6"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/event_7"
            android:layout_width="350dp"
            android:layout_height="140dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="975dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/dgrate_accent_2"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            tools:ignore="UnusedAttribute">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="100dp"
                android:layout_marginTop="15dp"
                android:layout_height="120dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_img_tec_7"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription,MissingConstraints" />

            <TextView
                android:id="@+id/text_tec_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="55dp"
                android:text="@string/tech_event_7"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/event_8"
            android:layout_width="350dp"
            android:layout_height="140dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="1130dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/dgrate_accent_2"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            tools:ignore="UnusedAttribute">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginTop="30dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_img_tec_8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription,MissingConstraints" />

            <TextView
                android:id="@+id/text_tec_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="55dp"
                android:text="@string/tech_event_8"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/event_9"
            android:layout_width="350dp"
            android:layout_height="140dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="1285dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/dgrate_accent_2"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            tools:ignore="UnusedAttribute">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginTop="30dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_img_tec_9"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription,MissingConstraints" />


            <TextView
                android:id="@+id/text_tec_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="55dp"
                android:text="@string/tech_event_9"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/event_10"
            android:layout_width="350dp"
            android:layout_height="140dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="1440dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/dgrate_accent_2"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            tools:ignore="UnusedAttribute">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="30dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_img_tec_10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription,MissingConstraints" />

            <TextView
                android:id="@+id/text_tec_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="55dp"
                android:text="@string/tech_event_10"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>


    </RelativeLayout>



</ScrollView>